# crypto-news-mcp

./: Dockerfile  README.md  main.py  pyproject.toml
src/coindesk_mcp/: page.py  server.py  utils.py
src/cryptonewsmcp/: page.py  server.py
src/cryptonewsmcp/decrypt/: __init__.py  news.py
src/cryptonewsmcp/types/: news.py
tests/: test_coindesk.py  test_decrypt.py
tests/testdata/: coindesk.html  decrypt.html
