[project]
name = "cryptonewsmcp"
version = "0.1.1"
description = ""
readme = "README.md"
authors = [{ name = "narumi", email = "toucans-cutouts0f@icloud.com" }]
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "feedparser>=6.0.11",
    "loguru>=0.7.3",
    "markdownify>=1.1.0",
    "mcp[cli]>=1.6.0",
    "python-dateutil>=2.9.0.post0",
]

[project.scripts]
cryptonewsmcp = "cryptonewsmcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "logfire>=3.12.0",
    "loguru>=0.7.3",
    "mypy>=1.13.0",
    "openai-agents>=0.0.9",
    "pip>=25.0.1",
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
    "ruff>=0.7.3",
    "types-python-dateutil>=2.9.0.20241206",
    "types-pyyaml>=6.0.12.20250402",
]

[tool.ruff]
exclude = ["build"]
line-length = 120

[tool.ruff.lint]
select = [
    "B",   # flake8-bugbear
    "C",   # flake8-comprehensions
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "UP",  # pyupgrade
    "W",   # pycodestyle warnings
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
ignore_missing_imports = true
